# tpsl

./: .dockerignore  .env.template  .flake8  .gitignore  .kilocodemodes  AGENTS.md  CMakeLists.txt  Dockerfile.backend  Makefile  OANDA.env.template  README.md  check_ohlc.py  debug_gpu_trace.py  deploy.sh  docker-compose.full.yml  docker-compose.hotband.yml  docker-compose.live.yml  pytest.ini  requirements.txt  run_full_sweep.sh  test_db.py  trading_performance_report.md
.agent/workflows/: manifold_mcp_ops.md
apps/: README.md
apps/frontend/: .eslintrc.js  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  nginx.global.conf  nginx.local.conf  nginx.local.tmpl.conf  nginx.tmpl.conf  package.json  pnpm-lock.yaml  tsconfig.json
apps/frontend/nginx.d/: default.conf
apps/frontend/public/: sep-config.js
apps/frontend/src/: App.tsx  index.css
cmake/: FindAsio.cmake  fix_nlohmann_serializer.sh  global_includes.h  gtest.cmake  nlohmann_json_patch.cmake  template.cmake  template_backup.cmake
config/: 24h_strategy.yaml  backtest_grid.json  bundle_strategy.yaml  default.yaml  echo_strategy.yaml  golden_portfolio_config.json  live_account_risk_limits.py  live_params.json  mean_reversion_strategy.yaml  optimization_smart_sweep.yaml  optimization_space.yaml  optimized_tpsl.yaml  pair_registry.json  pip_scales.json  regime_mapping.json  telemetry.yaml  ultimate_strategy.yaml
configs/research/: semantic_pilot.json
dashboards/: grafana.json
docs/: 01_System_Architecture.md  02_Manifold_Theory_and_Schema.md  03_Operations_and_Analytics.md  04_Strategy_and_Optimization.md  05_GPU_Handoff.md
docs/evidence/: 2026-03-17_mean_reversion_gpu_sweep_audit.md
ops/cron/: backfill_candles.sh  gate_freshness.sh  gate_freshness_to_slack.sh
ops/monitoring/: prometheus_regime.yml
ops/monitoring/alerts/: sep_regime.rules.yml
ops/systemd/: sep-backfill.service  sep-data-downloader.service  sep-manifold.service
options_research/: .env.template  README.md  __init__.py  env.py  models.py
options_research/backtest/: __init__.py  runner.py  walk_forward.py
options_research/execution/: __init__.py  fills.py
options_research/portfolio/: __init__.py  engine.py  risk.py
options_research/reporting/: __init__.py  metrics.py
options_research/selection/: __init__.py  debit_spread.py
options_research/signals/: __init__.py  base.py  placeholder.py  sep_regime.py
options_research/strategies/: __init__.py  expressions.py
options_research/tools/: __init__.py  ingest_alpha_vantage.py  ingest_marketdata.py  run_backtest.py  run_walk_forward.py
output/: live_params.json
plans/: AUDIT_REPORT_V3_FINAL.md  INVESTOR_PITCH_DECK.md  LIVE_DEPLOYMENT_ALIGNMENT_AUDIT_2026-03-19.md  MEAN_REVERSION_STATUS_MEMO_2026-03-20.md  REPO_FILE_NECESSITY_AUDIT.md  SIZING_PRECEDENT_NOTE_2026-03-19.md  SWEEP_READINESS_AUDIT_FINAL.md
runbooks/: canonical_180_live_deployment.md  gpu_canonical_sweep.md
scripts/: __init__.py  adapters.py  enrich_features.py  trading_service.py
scripts/research/: __init__.py  bundle_rules.py  data_store.py  generate_report.py  gpu_optimizer.py  ml_train.py  roc_utils.py  s5_alignment_test.py  test_direction_correlation.py  validate_signals.py  visualize_profit_smile.py
scripts/research/optimizer/: debug_runner.py  gpu_runner.py  parameter_grid.py  result_collector.py  (+2 more)
scripts/tools/: analyze_blind_spots.py  audit_live_strategy.py  audit_mean_reversion.py  audit_portfolio_overlap.py  auto_backfill_watcher.py  backfill_candles.py  build_features.py  build_manifold_engine.sh  build_synthetic_m1_dataset.py  check_aux_keys.py  cli_runner.py  export_optimal_trades.py  extract_golden_portfolio.py  health_check_service.py  json_cache.py  json_encoders.py  json_to_yaml_strategy.py  manage_manifolds.py  optimize_single_instrument.py  profile_instrument_regimes.py  push_config.py  repair_history.py  seed_valkey_defaults.py  serialization_mixin.py  signal_analytics.py  stream_candles.py  time_utils.py  validate_live_runtime.py  validate_optimization_results.py
scripts/trading/: __init__.py  api.py  api_serializers.py  backtest_manager.py  candle_parser.py  candle_utils.py  circuit_breaker.py  env_loader.py  evidence_cache.py  execution_engine.py  exposure_tracker.py  gate_evaluator.py  gate_loader.py  gate_validation.py  guards.py  live_params.py  log_formatters.py  market_types.py  ml_evaluator.py  oanda.py  portfolio_manager.py  position_tracker.py  pricing_cache.py  pricing_utils.py  regime_manifold_service.py  retry_utils.py  risk_calculator.py  risk_limits.py  session_policy.py  state_manager.py  structural_circuit_breaker.py  trade_planner.py  trade_records.py  trade_stack.py  trade_state.py
sep_historical_gates/: README.md  __init__.py  cli.py  compression_cli.py  compression_study.py  exporter.py  study.py  study_cli.py
src/: CMakeLists.txt
src/core/: bindings.cpp  byte_stream_manifold.cpp  byte_stream_manifold.h  forward_window_result.h  io_utils.cpp  io_utils.h  manifold_builder.cpp  manifold_builder.h  oanda_client.cpp  oanda_client.h  standard_includes.h  structural_entropy.cpp  structural_entropy.h  trading_signals.cpp  trading_signals.h  trajectory.h
tests/: conftest.py  test_gpu.py  test_live_alignment.py  test_manifold_codec.py  test_mask.py
tests/options_research/: test_alpha_vantage.py  test_backtest_runner.py  test_debit_spread_selection.py  test_fill_model.py  test_local_file_data_source.py  test_marketdata.py  test_models.py  test_placeholder_signal.py  test_portfolio_engine.py  test_reporting_metrics.py  test_sep_regime_signal.py  test_walk_forward.py
tests/sep_historical_gates/: test_compression_study.py  test_exporter.py  test_study.py
tests/tools/: test_export_optimal_trades.py  test_push_config.py
tests/trading/: test_api_serializers.py  test_env_loader.py  test_execution_engine.py  test_exposure_tracker.py  test_gate_evaluation.py  test_gate_evaluator.py  test_ml_evaluator.py  test_risk_calculator.py  test_risk_limits.py  test_stream_candles.py  test_tpsl.py  test_trade_planner.py  test_trade_stack.py  test_trading_service.py
(+44 files in other folders)
